[OPAL-420] Buttons for different edit actions

--- a/src/app/views/provisioning/details.less
+++ b/src/app/views/provisioning/details.less
@@ -1,3 +1,9 @@
 #provisioning-details {
+  .nav-tabs{
+    border-bottom: 0px;
+  }
 
+  .subscription-provisioning-details{
+    margin-top: 30px;
+  }
 }
