--- a/src/app/views/provisioning/details.html
+++ b/src/app/views/provisioning/details.html
@@ -1,6 +1,22 @@
 <div id="provisioning-details">
   <h1 translate>mno_enterprise.templates.dashboard.provisioning.details.title</h1>
-  <div class="well clearfix">
+  <div class="subscription-provisioning-details">
+    <div uib-tabset active="vm.activeTab">
+      <div uib-tab index="'EDIT'" ng-click="vm.getSubscription()" ng-if="vm.editButtonVisable('EDIT')">
+        <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.edit' | translate }}</div>
+      </div>
+      <div uib-tab index="'CHANGE'" ng-if="vm.editButtonVisable('CHANGE')">
+        <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.change' | translate }}</div>
+      </div>
+      <div uib-tab index="'RENEW'" ng-if="vm.editButtonVisable('RENEW')">
+        <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.renew' | translate }}</div>
+      </div>
+      <div uib-tab index="'SUSPEND'" ng-if="vm.editButtonVisable('SUSPEND')">
+        <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.suspend' | translate }}</div>
+      </div>
+    </div>
+  </div>
+  <div class="well clearfix subscription-info">
     <div class="breadcrumb-info">
       <ol class="breadcrumb">
         <li class="breadcrumb-item active">{{ vm.subscription.product.name }}</li>
@@ -8,7 +24,6 @@
       </ol>
     </div>
     <form name="vm.detailsForm" ng-submit="vm.submit(vm.detailsForm)" sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.subscription.custom_data"></form>
-
     <button type="submit" ng-click="vm.submit(vm.detailsForm)" ng-disabled="(vm.detailsForm.$pristine && !vm.isEditMode) || vm.detailsForm.$invalid" class="btn btn-primary pull-right top-buffer-1" translate>
       mno_enterprise.templates.dashboard.provisioning.details.next
     </button>
