--- a/src/app/views/provisioning/details.html
+++ b/src/app/views/provisioning/details.html
@@ -5,27 +5,32 @@
       <div uib-tab index="'EDIT'" ng-click="vm.getSubscription()" ng-if="vm.editButtonVisable('EDIT')">
         <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.edit' | translate }}</div>
       </div>
-      <div uib-tab index="'CHANGE'" ng-if="vm.editButtonVisable('CHANGE')">
+      <div uib-tab index="'CHANGE'" ng-click="vm.getSubscription()" ng-if="vm.editButtonVisable('CHANGE')">
         <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.change' | translate }}</div>
       </div>
-      <div uib-tab index="'RENEW'" ng-if="vm.editButtonVisable('RENEW')">
+      <div uib-tab index="'RENEW'" ng-click="vm.getSubscription()" ng-if="vm.editButtonVisable('RENEW')">
         <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.renew' | translate }}</div>
       </div>
-      <div uib-tab index="'SUSPEND'" ng-if="vm.editButtonVisable('SUSPEND')">
+      <div uib-tab index="'SUSPEND'" ng-click="vm.getSubscription()" ng-if="vm.editButtonVisable('SUSPEND')">
         <div uib-tab-heading>{{ 'mno_enterprise.templates.dashboard.provisioning.subscription.suspend' | translate }}</div>
       </div>
     </div>
   </div>
   <div class="well clearfix subscription-info">
-    <div class="breadcrumb-info">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item active">{{ vm.subscription.product.name }}</li>
-        <li class="breadcrumb-item active">{{ vm.subscription.product_pricing.name }}</li>
-      </ol>
+    <div ng-show="vm.isLoading" class="text-center">
+      <i class="fa fa-refresh fa-spin fa-4x"></i>
     </div>
-    <form name="vm.detailsForm" ng-submit="vm.submit(vm.detailsForm)" sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.subscription.custom_data"></form>
-    <button type="submit" ng-click="vm.submit(vm.detailsForm)" ng-disabled="(vm.detailsForm.$pristine && !vm.isEditMode) || vm.detailsForm.$invalid" class="btn btn-primary pull-right top-buffer-1" translate>
-      mno_enterprise.templates.dashboard.provisioning.details.next
-    </button>
+    <div ng-if="!vm.isLoading">
+      <div class="breadcrumb-info">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active">{{ vm.subscription.product.name }}</li>
+          <li class="breadcrumb-item active">{{ vm.subscription.product_pricing.name }}</li>
+        </ol>
+      </div>
+      <form name="vm.detailsForm" ng-submit="vm.submit(vm.detailsForm)" sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.subscription.custom_data"></form>
+      <button type="submit" ng-click="vm.submit(vm.detailsForm)" ng-disabled="(vm.detailsForm.$pristine && !vm.isEditMode) || vm.detailsForm.$invalid" class="btn btn-primary pull-right top-buffer-1" translate>
+        mno_enterprise.templates.dashboard.provisioning.details.next
+      </button>
+    </div>
   </div>
 </div>
