[MNOE-1018] Fix refresh bug

--- a/src/app/views/provisioning/confirm.html
+++ b/src/app/views/provisioning/confirm.html
@@ -70,7 +70,7 @@
     </div>
 
     <span class="pull-right top-buffer-1">
-      <button class="btn btn-primary" ui-sref="home.provisioning.order()" translate>mno_enterprise.templates.dashboard.provisioning.confirm.edit_order</button>
+      <button class="btn btn-primary" ng-click="vm.editOrder()" translate>mno_enterprise.templates.dashboard.provisioning.confirm.edit_order</button>
       <button class="btn btn-warning" ng-click="vm.validate()" ng-disabled="vm.isLoading">
         <span ng-show="vm.isLoading"><i class="fa fa-spinner fa-pulse fa-fw"></i></span>
         <span translate>mno_enterprise.templates.dashboard.provisioning.confirm.validate</span>
