--- a/src/app/views/marketplace/marketplace.less
+++ b/src/app/views/marketplace/marketplace.less
@@ -36,12 +36,12 @@
   //-------------------------------
   // App Card
   //-------------------------------
-  .marketplace-app-card {
+  .marketplace-product-card {
     position: relative;
     background-color: @dashboard-marketplace-tile-bg-color;
     color: @dashboard-marketplace-tile-text-color;
     cursor: pointer;
-    @dashboard-marketplace-app-card();
+    @dashboard-marketplace-product-card();
 
     img.media-object {
       max-width: 100px;
@@ -64,7 +64,7 @@
     }
   }
 
-  .marketplace-app-card-checkbox {
+  .marketplace-product-card-checkbox {
     position: absolute;
     top: 0;
     left: 0;
@@ -81,33 +81,33 @@
   }
 
   // Application logo
-  .marketplace-app-card img.media-object {
+  .marketplace-product-card img.media-object {
     max-width: 100px;
     border: solid 1px @dashboard-marketplace-tile-img-border-color;
     border-radius: 5px;
   }
-  .marketplace-app-card:hover img.media-object {
+  .marketplace-product-card:hover img.media-object {
     border: solid 1px darken(@dashboard-marketplace-tile-hover-img-border-color,5%);
   }
 
   // Application Description
-  .marketplace-app-card .media-body {
+  .marketplace-product-card .media-body {
     padding-right: 10px;
     color: @dashboard-marketplace-tile-text-color;
   }
-  .marketplace-app-card:hover .media-body {
+  .marketplace-product-card:hover .media-body {
     color: @dashboard-marketplace-tile-hover-text-color;
   }
 
   // App tile arrow right
-  .marketplace-app-card .arrow {
+  .marketplace-product-card .arrow {
     position: absolute;
     right: 20px;
     top: 50px;
     color: @dashboard-marketplace-tile-hover-arrow-color;
     visibility: hidden;
   }
-  .marketplace-app-card:hover .arrow {
+  .marketplace-product-card:hover .arrow {
     visibility: visible;
   }
 }
