--- a/src/app/views/public/public.less
+++ b/src/app/views/public/public.less
@@ -209,6 +209,10 @@
     margin-bottom: 25px;
   }
 
+  .marketplace-product-card {
+    @landing-marketplace-product-card();
+    background-color: @landing-marketplace-tile-bg-color;
+
   .local-marketplace-list {
     display: flex;
     flex-direction: row;
