[MNOE-1034]Add productId/appID to product url

--- a/src/app/components/mno-products/mno-product-listing.html
+++ b/src/app/components/mno-products/mno-product-listing.html
@@ -62,7 +62,7 @@
                      ng-model="product.toCompare">
             </label>
           </div>
-          <a class="marketplace-product-card" ui-sref="{{$ctrl.productState}}({productId: product.nid})">
+          <a class="marketplace-product-card" ui-sref="{{$ctrl.productRef(product)}}">
             <div class="media">
               <div class="pull-left">
                 <img class="media-object" ng-src="{{::product.logo}}" ng-alt="{{::product.name}}">
