--- a/src/app/components/mno-products/mno-product-listing.html
+++ b/src/app/components/mno-products/mno-product-listing.html
@@ -69,7 +69,7 @@
               </div>
               <div class="media-body">
                 <h4 class="media-heading">{{::product.name}}</h4>
-                {{::product.tiny_description}}
+                {{::product.values_attributes.tiny_description}}
               </div>
               <div class="arrow">
                 <i class="fa fa-caret-right fa-2x"></i>
