[MNOE-1034]Replace mno-product with mno-app

--- a/src/app/views/public/public.less
+++ b/src/app/views/public/public.less
@@ -139,6 +139,7 @@
     }
   }
 
+
   .show-content {
     .well {
       background-color: @public-marketplace-show-sections-bg-color;
@@ -212,6 +213,7 @@
   .marketplace-product-card {
     @landing-marketplace-product-card();
     background-color: @landing-marketplace-tile-bg-color;
+  }
 
   .local-marketplace-list {
     display: flex;
