--- a/src/app/components/mno-products/mno-product.html
+++ b/src/app/components/mno-products/mno-product.html
@@ -137,13 +137,13 @@
         <!-- Comments & Ratings -->
         <div id="comments">
           <div class="add-review">
-            <span ng-show="vm.appInstance">
+            <span ng-show="vm.productInstalled">
               {{ 'mno_enterprise.templates.dashboard.marketplace.show.company_feedback' | translate }}:
               <button type="button" class="btn btn-warning" ng-click="vm.openCreateReviewModal()">
                 {{ 'mno_enterprise.templates.dashboard.marketplace.show.write_review' | translate }}
               </button>
             </span>
-            <span ng-if="!vm.appInstance" class="add-review">
+            <span ng-if="!vm.productInstalled" class="add-review">
               {{ 'mno_enterprise.templates.dashboard.marketplace.show.no_app_no_review' | translate }}
             </span>
             <span class="pull-right" ng-if="vm.reviews.list.length != 0">
@@ -292,7 +292,7 @@
                       </div>
                     </div>
                     <div class="col-sm-3 question-actions">
-                      <a class="btn btn-link btn-link-primary" name="button" ng-if="vm.appInstance" ng-click="vm.openCreateAnswerModal(question, key)">
+                      <a class="btn btn-link btn-link-primary" name="button" ng-if="vm.productInstalled" ng-click="vm.openCreateAnswerModal(question, key)">
                         <i class="fa fa-plus"></i> {{'mno_enterprise.templates.dashboard.marketplace.show.answer_q' | translate}}</a>
                       <a class="btn btn-link btn-link-warning" name="button" ng-if="question.user_id == vm.userId" ng-click="vm.openEditQuestionModal(question, key)">
                         <i class="fa fa-edit"></i> {{'mno_enterprise.templates.dashboard.marketplace.show.edit_q' | translate}}</a>
