--- a/src/app/components/mno-products/mno-product.html
+++ b/src/app/components/mno-products/mno-product.html
@@ -110,21 +110,17 @@
         <div class="well">
           <h2>{{ 'mno_enterprise.templates.dashboard.marketplace.show.price' | translate }}</h2>
           <ul>
-            <li ng-if="vm.app.free_trial_duration > 0">
-              <b>{{ 'mno_enterprise.templates.dashboard.marketplace.show.free_trial_duration' | translate }}</b>: {{vm.app.free_trial_duration}} {{vm.app.free_trial_unit}}
+            <li ng-if="vm.product.free_trial_duration > 0">
+              <b>{{ 'mno_enterprise.templates.dashboard.marketplace.show.free_trial_duration' | translate }}</b>: {{vm.product.free_trial_duration}} {{vm.product.free_trial_unit}}
             </li>
-            <li ng-repeat="plan in vm.pricing_plans">
-              <b>{{plan.name}}</b>: {{plan.description}}
-              <br>
-              <div ng-show="vm.pricedPlan(plan)">
-                <span>{{plan.currency}}</span>
-                <span ng-show="plan.price.value">{{plan.price.value}}</span>
-                <span ng-hide="plan.price.value">{{plan.price}}</span>
-                <span ng-show="plan.pricing_type == 'recurring'">{{plan.factor}}</span>
-              </div>
-              <div ng-show="plan.pricing_type == 'payg'">
-                <span>{{ 'mno_enterprise.templates.dashboard.marketplace.show.pricing.payg' | translate }}</span>
-              </div>
+            <li ng-repeat="plan in vm.product.pricing_plans">
+              <b>{{plan.name}}</b>: {{plan.description}} <br>
+              <span ng-show="vm.showNoPricingFound(plan)">{{ 'mno_enterprise.templates.dashboard.marketplace.show.no_pricing_found' | translate }}</span>
+              <span ng-show="vm.pricedPlan(plan)" ng-repeat="price in plan.prices | filterBy: ['currency']: vm.orgCurrency">
+                {{price.currency}} {{price.price_cents / 100}}
+                <span ng-show="plan.pricing_type == 'recurring'"> / {{plan.per_unit}} / {{plan.per_duration}}</span>
+              </span>
+              <span ng-show="plan.pricing_type == 'payg'">{{'mno_enterprise.templates.dashboard.marketplace.show.pricing.payg' | translate}}</span>
             </li>
           </ul>
           <div ng-bind-html="vm.app.pricing_text"></div>
