[MNOE-1164] Added order summary for products without pricing plans

--- a/src/app/views/provisioning/confirm.html
+++ b/src/app/views/provisioning/confirm.html
@@ -3,10 +3,38 @@
   <div class="well clearfix">
     <div class="breadcrumb-info">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item active">{{ vm.orderTypeText | translate }}</li>
         <li class="breadcrumb-item active">{{ vm.subscription.product.name }}</li>
         <li class="breadcrumb-item active">{{ vm.subscription.product_pricing.name }}</li>
       </ol>
+    </div>
+
+    <div class="table-cell">
+      <div class="row th-row hidden-xs">
+        <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.order_type' | translate }}</div>
+        <div ng-show="vm.subscription.product.product_type == 'application'" class="cell col-sm-7">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.title' | translate }}</div>
+      </div>
+      <div class="row td-row">
+        <div class="cell col-sm-3">
+          <span class="cell-label visible-xs-inline">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.order_type' | translate }}:
+          </span>
+          {{ vm.orderTypeText | translate }}
+        </div>
+        <div ng-show="vm.subscription.product.product_type == 'application'" class="cell col-sm-7">
+          <span class="cell-label visible-xs-inline">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.title' | translate }}:
+          </span>
+          <div ng-hide="vm.singleBilling">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.single_billing_disabled' | translate }}
+          </div>
+          <div ng-show="vm.singleBilling && !vm.billedLocally">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.externally_managed' | translate }}
+          </div>
+          <div ng-show="vm.singleBilling && vm.billedLocally">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.billed_locally' | translate }}
+          </div>
+        </div>
+      </div>
     </div>
 
     <div ng-show="(vm.singleBilling && vm.billedLocally) || vm.subscription.product.product_type != 'application'" class="table-cell">
@@ -67,38 +95,6 @@
           <span ng-show="vm.subscription.product_pricing.pricing_type == 'free'">
             {{ 'mno_enterprise.templates.dashboard.provisioning.order.pricing_type.free' | translate }}
           </span>
-        </div>
-      </div>
-    </div>
-
-    <!-- Display Read-Only Custom Form Data If It Exists -->
-    <div ng-if="vm.subscription.custom_data && vm.subscription.product.custom_schema">
-      <mno-widget is-loading="vm.isLoading">
-        <mno-widget-header></mno-widget-header>
-        <mno-widget-body>
-          <form name="vm.detailsForm" sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.subscription.custom_data" sf-options="{ formDefaults: { readonly: { true } } }"></form>
-        </mno-widget-body>
-      </mno-widget>
-    </div>
-
-    <div ng-show="vm.subscription.product.product_type == 'application'" class="table-cell">
-      <div class="row th-row hidden-xs">
-        <div class="cell col-sm-12">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.title' | translate }}</div>
-      </div>
-      <div class="row td-row">
-        <div class="cell col-sm-12">
-          <span class="cell-label visible-xs-inline">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.title' | translate }}
-          </span>
-          <div ng-hide="vm.singleBilling">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.single_billing_disabled' | translate }}
-          </div>
-          <div ng-show="vm.singleBilling && !vm.billedLocally">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.externally_managed' | translate }}
-          </div>
-          <div ng-show="vm.singleBilling && vm.billedLocally">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.billed_locally' | translate }}
-          </div>
         </div>
       </div>
     </div>
