Refactor pricing plan text

--- a/src/app/views/provisioning/confirm.html
+++ b/src/app/views/provisioning/confirm.html
@@ -24,14 +24,8 @@
           <span class="cell-label visible-xs-inline">
             {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.title' | translate }}:
           </span>
-          <div ng-hide="vm.singleBilling">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.single_billing_disabled' | translate }}
-          </div>
-          <div ng-show="vm.singleBilling && !vm.billedLocally">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.externally_managed' | translate }}
-          </div>
-          <div ng-show="vm.singleBilling && vm.billedLocally">
-            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.pricing_info.billed_locally' | translate }}
+          <div>
+            {{ vm.pricingText() | translate }}
           </div>
         </div>
       </div>
