--- a/src/app/views/provisioning/summary.html
+++ b/src/app/views/provisioning/summary.html
@@ -18,9 +18,10 @@
     <div ng-show="!vm.isLoading && vm.subscription.product_pricing" class="table-cell">
       <div class="row th-row hidden-xs">
         <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.name' | translate }}</div>
-        <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.order_type' | translate }}</div>
+        <div class="cell col-sm-2">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.order_type' | translate }}</div>
+        <div ng-show="vm.subscription.product_pricing.license_based" class="cell col-sm-2">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.licenses' | translate }}</div>
         <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.description' | translate }}</div>
-        <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.price' | translate }}</div>
+        <div class="cell col-sm-2">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.price' | translate }}</div>
       </div>
 
       <div class="row td-row">
@@ -31,11 +32,18 @@
           {{ vm.subscription.product_pricing.name }}
         </div>
 
-        <div class="cell col-sm-3">
+        <div class="cell col-sm-2">
           <span class="cell-label visible-xs-inline">
             {{ 'mno_enterprise.templates.dashboard.provisioning.summary.order_type' | translate }}:
           </span>
           {{ vm.orderTypeText | translate }}
+        </div>
+
+        <div class="cell col-sm-2" ng-show="vm.subscription.product_pricing.license_based">
+          <span class="cell-label visible-xs-inline">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.licenses' | translate }}:
+          </span>
+          {{ vm.subscription.max_licenses }}
         </div>
 
         <div class="cell col-sm-3">
@@ -45,7 +53,7 @@
           {{ vm.subscription.product_pricing.description }}
         </div>
 
-        <div class="cell col-sm-3">
+        <div class="cell col-sm-2">
           <span class="cell-label visible-xs-inline">
             {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.price' | translate }}:
           </span>
