--- a/src/app/views/provisioning/confirm.html
+++ b/src/app/views/provisioning/confirm.html
@@ -34,6 +34,7 @@
     <div ng-show="(vm.singleBilling && vm.billedLocally) || vm.subscription.product.product_type != 'application'" class="table-cell">
       <div class="row th-row hidden-xs">
         <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.name' | translate }}</div>
+        <div class="cell col-sm-2">{{ 'mno_enterprise.templates.dashboard.provisioning.summary.order_type' | translate }}</div>
         <div class="cell col-sm-2">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.description' | translate }}</div>
         <div class="cell col-sm-2" ng-show="vm.subscription.product_pricing.license_based">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.licenses' | translate }}</div>
         <div class="cell col-sm-3">{{ 'mno_enterprise.templates.dashboard.provisioning.confirm.price' | translate }}</div>
@@ -45,6 +46,13 @@
             {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.name' | translate }}:
           </span>
           {{ vm.subscription.product_pricing.name }}
+        </div>
+
+        <div class="cell col-sm-2">
+          <span class="cell-label visible-xs-inline">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.summary.order_type' | translate }}:
+          </span>
+          {{ vm.orderTypeText | translate }}
         </div>
 
         <div class="cell col-sm-2">
