Reordered columns on provisioning table

--- a/src/app/views/provisioning/summary.html
+++ b/src/app/views/provisioning/summary.html
@@ -97,6 +97,13 @@
             </span>
           </div>
         </div>
+
+        <div class="cell col-sm-3">
+          <span class="cell-label visible-xs-inline">
+            {{ 'mno_enterprise.templates.dashboard.provisioning.confirm.description' | translate }}:
+          </span>
+          {{ vm.subscription.product_pricing.description }}
+        </div>
       </div>
     </div>
   </div>
